@@ -89,11 +89,7 @@ class WorldpayTest < Test::Unit::TestCase
         invoice_reference_number: 'INV12233565',
         customer_reference: 'CUST00000101',
         card_acceptor_tax_id: 'VAT1999292',
-        sales_tax: {
-          amount: '20',
-          exponent: '2',
-          currency: 'USD'
-        },
+        tax_amount: '20',
         ship_from_postal_code:  '43245',
         destination_postal_code: '54545',
         destination_country_code: 'CO',
@@ -101,8 +97,7 @@ class WorldpayTest < Test::Unit::TestCase
           day_of_month: Date.today.day,
           month: Date.today.month,
           year: Date.today.year
-        },
-        tax_exempt: 'false'
+        }
       }
     }
 
@@ -110,58 +105,34 @@ class WorldpayTest < Test::Unit::TestCase
       level_3_data: {
         customer_reference: 'CUST00000102',
         card_acceptor_tax_id: 'VAT1999285',
-        sales_tax: {
-          amount: '20',
-          exponent: '2',
-          currency: 'USD'
-        },
-        discount_amount: {
-          amount: '1',
-          exponent: '2',
-          currency: 'USD'
-        },
-        shipping_amount: {
-          amount: '50',
-          exponent: '2',
-          currency: 'USD'
-        },
-        duty_amount: {
-          amount: '20',
-          exponent: '2',
-          currency: 'USD'
-        },
-        item: {
+        tax_amount: '20',
+        discount_amount: '1',
+        shipping_amount: '50',
+        duty_amount: '20',
+        line_items: [{
           description: 'Laptop 14',
           product_code: 'LP00125',
           commodity_code: 'COM00125',
           quantity: '2',
-          unit_cost: {
-            amount: '1500',
-            exponent: '2',
-            currency: 'USD'
-          },
+          unit_cost: '1500',
           unit_of_measure: 'each',
-          item_total: {
-            amount: '3000',
-            exponent: '2',
-            currency: 'USD'
-          },
-          item_total_with_tax: {
-            amount: '3500',
-            exponent: '2',
-            currency: 'USD'
-          },
-          item_discount_amount: {
-            amount: '200',
-            exponent: '2',
-            currency: 'USD'
-          },
-          tax_amount: {
-            amount: '500',
-            exponent: '2',
-            currency: 'USD'
-          }
-        }
+          item_discount_amount: '200',
+          discount_amount: '0',
+          tax_amount: '500',
+          total_amount: '4000'
+        },
+                     {
+                       description: 'Laptop 15',
+                       product_code: 'LP00120',
+                       commodity_code: 'COM00125',
+                       quantity: '2',
+                       unit_cost: '1000',
+                       unit_of_measure: 'each',
+                       item_discount_amount: '200',
+                       tax_amount: '500',
+                       discount_amount: '0',
+                       total_amount: '3000'
+                     }]
       }
     }
   end
@@ -442,12 +413,30 @@ class WorldpayTest < Test::Unit::TestCase
       assert_match %r(<invoiceReferenceNumber>INV12233565</invoiceReferenceNumber>), data
       assert_match %r(<customerReference>CUST00000101</customerReference>), data
       assert_match %r(<cardAcceptorTaxId>VAT1999292</cardAcceptorTaxId>), data
-      assert_match %r(<salesTax><amountvalue="20"currencyCode="USD"exponent="2"/></salesTax>), data.gsub(/\s+/, '')
+      assert_match %r(<salesTax><amountvalue="20"currencyCode="GBP"exponent="2"/></salesTax>), data.gsub(/\s+/, '')
       assert_match %r(<shipFromPostalCode>43245</shipFromPostalCode>), data
       assert_match %r(<destinationPostalCode>54545</destinationPostalCode>), data
       assert_match %r(<destinationCountryCode>CO</destinationCountryCode>), data
       assert_match %r(<taxExempt>false</taxExempt>), data
-      assert_match %r(<salesTax><amountvalue="20"currencyCode="USD"exponent="2"/></salesTax>), data.gsub(/\s+/, '')
+      assert_match %r(<orderDate><datedayOfMonth="#{Date.today.day}"month="#{Date.today.month}"year="#{Date.today.year}"/></orderDate>), data.gsub(/\s+/, '')
+    end.respond_with(successful_authorize_response)
+    assert_success response
+  end
+
+  def test_transaction_with_level_two_data_without_tax
+    @level_two_data[:level_2_data][:tax_amount] = 0
+    options = @options.merge(@level_two_data)
+    response = stub_comms do
+      @gateway.authorize(@amount, @credit_card, options)
+    end.check_request do |_endpoint, data, _headers|
+      assert_match %r(<invoiceReferenceNumber>INV12233565</invoiceReferenceNumber>), data
+      assert_match %r(<customerReference>CUST00000101</customerReference>), data
+      assert_match %r(<cardAcceptorTaxId>VAT1999292</cardAcceptorTaxId>), data
+      assert_match %r(<salesTax><amountvalue="0"currencyCode="GBP"exponent="2"/></salesTax>), data.gsub(/\s+/, '')
+      assert_match %r(<shipFromPostalCode>43245</shipFromPostalCode>), data
+      assert_match %r(<destinationPostalCode>54545</destinationPostalCode>), data
+      assert_match %r(<destinationCountryCode>CO</destinationCountryCode>), data
+      assert_match %r(<taxExempt>true</taxExempt>), data
       assert_match %r(<orderDate><datedayOfMonth="#{Date.today.day}"month="#{Date.today.month}"year="#{Date.today.year}"/></orderDate>), data.gsub(/\s+/, '')
     end.respond_with(successful_authorize_response)
     assert_success response
@@ -460,11 +449,11 @@ class WorldpayTest < Test::Unit::TestCase
     end.check_request do |_endpoint, data, _headers|
       assert_match %r(<customerReference>CUST00000102</customerReference>), data
       assert_match %r(<cardAcceptorTaxId>VAT1999285</cardAcceptorTaxId>), data
-      assert_match %r(<salesTax><amountvalue="20"currencyCode="USD"exponent="2"/></salesTax>), data.gsub(/\s+/, '')
-      assert_match %r(<discountAmount><amountvalue="1"currencyCode="USD"exponent="2"/></discountAmount>), data.gsub(/\s+/, '')
-      assert_match %r(<shippingAmount><amountvalue="50"currencyCode="USD"exponent="2"/></shippingAmount>), data.gsub(/\s+/, '')
-      assert_match %r(<dutyAmount><amountvalue="20"currencyCode="USD"exponent="2"/></dutyAmount>), data.gsub(/\s+/, '')
-      assert_match %r(<item><description>Laptop14</description><productCode>LP00125</productCode><commodityCode>COM00125</commodityCode><quantity>2</quantity><unitCost><amountvalue="1500"currencyCode="USD"exponent="2"/></unitCost><itemTotal><amountvalue="3000"currencyCode="USD"exponent="2"/></itemTotal><itemTotalWithTax><amountvalue="3500"currencyCode="USD"exponent="2"/></itemTotalWithTax><itemDiscountAmount><amountvalue="200"currencyCode="USD"exponent="2"/></itemDiscountAmount><taxAmount><amountvalue="500"currencyCode="USD"exponent="2"/></taxAmount></item>), data.gsub(/\s+/, '')
+      assert_match %r(<salesTax><amountvalue="20"currencyCode="GBP"exponent="2"/></salesTax>), data.gsub(/\s+/, '')
+      assert_match %r(<discountAmount><amountvalue="1"currencyCode="GBP"exponent="2"/></discountAmount>), data.gsub(/\s+/, '')
+      assert_match %r(<shippingAmount><amountvalue="50"currencyCode="GBP"exponent="2"/></shippingAmount>), data.gsub(/\s+/, '')
+      assert_match %r(<dutyAmount><amountvalue="20"currencyCode="GBP"exponent="2"/></dutyAmount>), data.gsub(/\s+/, '')
+      assert_match %r(<item><description>Laptop14</description><productCode>LP00125</productCode><commodityCode>COM00125</commodityCode><quantity>2</quantity><unitCost><amountvalue=\"1500\"currencyCode=\"GBP\"exponent=\"2\"/></unitCost><unitOfMeasure>each</unitOfMeasure><itemTotal><amountvalue=\"3000\"currencyCode=\"GBP\"exponent=\"2\"/></itemTotal><itemTotalWithTax><amountvalue=\"4000\"currencyCode=\"GBP\"exponent=\"2\"/></itemTotalWithTax><itemDiscountAmount><amountvalue=\"0\"currencyCode=\"GBP\"exponent=\"2\"/></itemDiscountAmount><taxAmount><amountvalue=\"500\"currencyCode=\"GBP\"exponent=\"2\"/></taxAmount></item><item><description>Laptop15</description><productCode>LP00120</productCode><commodityCode>COM00125</commodityCode><quantity>2</quantity><unitCost><amountvalue=\"1000\"currencyCode=\"GBP\"exponent=\"2\"/></unitCost><unitOfMeasure>each</unitOfMeasure><itemTotal><amountvalue=\"2000\"currencyCode=\"GBP\"exponent=\"2\"/></itemTotal><itemTotalWithTax><amountvalue=\"3000\"currencyCode=\"GBP\"exponent=\"2\"/></itemTotalWithTax><itemDiscountAmount><amountvalue=\"0\"currencyCode=\"GBP\"exponent=\"2\"/></itemDiscountAmount><taxAmount><amountvalue=\"500\"currencyCode=\"GBP\"exponent=\"2\"/></taxAmount></item>), data.gsub(/\s+/, '')
     end.respond_with(successful_authorize_response)
     assert_success response
   end
