@@ -174,6 +174,8 @@
 * Worldpay: Add support for deafult ECI value [aenand] #5126
 * DLocal: Update stored credentials [sinourain] #5112
 * NMI: Add NTID override [yunnydang] #5134
+* Cybersource Rest: Support L2/L3 data [aenand] #5117
+* Worldpay: Support L2/L3 data [aenand] #5117
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
